# whisper.cpp

examples/: CMakeLists.txt  common.cpp  common.h
examples/server/: CMakeLists.txt  server.cpp
